<resources>
    <string name="app_name">MyMemo</string>
    <string name="login">Login</string>
    <string name="this_is_your_life_your_diary_start_journaling_today_and_capture_all_the_little_moment_in_your_life">This is your life, your diary. Start journaling today and capture all the little moment in your life</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Hello!</string>
    <string name="my_diary">My Diary</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="calender">Calender</string>
    <string name="category">Category</string>
    <string name="gallery">Gallery</string>
    <string name="meetings">Meetings</string>
    <string name="fitness">Fitness</string>
    <string name="study">Study</string>
    <string name="family">Family</string>
    <string name="hobbies">Hobbies</string>
    <string name="mood">Mood</string>
    <string name="view">View</string>
    <string name="meetingicon">MeetingIcon</string>
    <string name="study_icon">study_icon</string>
    <string name="family_icon">family_icon</string>
    <string name="hobbie_icon">hobbie_icon</string>
    <string name="mood_icon">mood_icon</string>
</resources>