<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actvivity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.mymemo.MainActivity"
    android:background="@drawable/background"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="374dp"
        android:layout_height="1129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-336dp"
        android:layout_marginEnd="-35dp"
        android:layout_marginBottom="-59dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="245dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="308dp"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="278dp"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="206dp"
        android:fontFamily="@font/grape_nut_font"
        android:text="@string/this_is_your_life_your_diary_start_journaling_today_and_capture_all_the_little_moment_in_your_life"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:background="@color/earthy_green"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="245dp"
        android:textColor="#000000"
        android:text="@string/login" />

    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:background="@color/earthy_green"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="246dp"
        android:layout_toEndOf="@+id/login"
        android:textColor="#000000"
        android:text="@string/register" />


</RelativeLayout>